
2019-03-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): output endianess and native EBCDIC

2019-03-23  Simon Sobisch <simonsobisch@gnu.org>

	* libcob.h: removed inclusion of gmp.h
	* common.h: cob_decimal is now only used if gmp.h / mpir.h / mp.h was
	  included before libcob.h, otherwise COB_WITHOUT_DECIMAL is defined
	* mlio.c: fixed missing include stddef.h

2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: definition of COB_MAX_NAMELEN
	* common.c: use of COB_MAX_NAMELEN, including sanity check
	* mlio.c, numeric.c, coblocal.h: moved duplicated code from mlio.c
	  to numeric.c as separate function cob_set_field_to_uint
	* coblocal.h [COB_WITHOUT_DECIMAL]: allow inclusion without gmp header

2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (check_valid_dir): converted from define to inline function
	* common.c (print_stat): not-active debug function (grabbed from manpage)

2019-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): changed msgid for "file handler" and
	  already output if RTD-version of VB-ISAM is used (even if this
	  wouldn't work currently), partially after Ron Norman

2019-02-26  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: define COB_EXT_EXPORT / COB_EXT_IMPORT

2019-01-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, termio.c, coblocal.h: added COB_DISPLAY_PUNCH_FILE
	* common.c (cob_set_runtime_option, cob_get_runtime_option),
	  common.h (cob_runtime_option_switch):
	  added COB_SET_RUNTIME_DISPLAY_PUNCH_FILE

2019-01-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, mlio.c, screenio.c: fixed compiler warnings
	* common.c (print_info): fixed issues if curses is not available,
	  introduced 2019-01-22

2019-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix background=foreground from terminal
	* screenio.c (cob_screen_init, cob_screen_attr): explicit define and use
	  color_pair 1 as "black on black" 