@@ -1,4 +1,8 @@
 
+2019-04-12  Simon Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c: define PDC_NCMOUSE to use NCURSES compatible mouse api
+
 2019-03-25  Simon Sobisch <simonsobisch@gnu.org>
 
 	* common.c (print_info): output endianess and native EBCDIC
